[package]
name = "rust-backend-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = { path = "src/web" }
utils = { path = "src/utils" }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
dotenv = "0.15"
