[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
serde_json = "1.0"